--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,18 @@
   color: white;
 }
 
+.App-footer {
+  background-color: #282c34;
+  max-height: 10vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+  padding: 2vh;
+}
+
 .App-link {
   color: #61dafb;
 }
