apod information properly displaying on DOM

--- a/src/App.css
+++ b/src/App.css
@@ -40,6 +40,13 @@
   color: #61dafb;
 }
 
+.App-video {
+  outline-width: 1px;
+  outline-color: black;
+  width: 10%;
+  height: 10%;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
